[workspace]
resolver = "2"
members = ["examples/web-counter",
    "packages/*"
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Nexa Team"]
license = "MIT"
repository = "https://github.com/nexa-framework/nexa"

[workspace.dependencies]
# Core dependencies
slotmap = "1.0"
smallvec = "1.0"
bumpalo = "3.14"
rustc-hash = "1.1"

# Async & Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# Desktop & Mobile
winit = "0.30"
wgpu = "0.20"
raw-window-handle = "0.6"

# CLI & Tracing
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
