[package]
name = "web-counter"
version = "0.1.0"
edition = "2021"



[dependencies]
nexa-core = { path = "../../packages/nexa-core" }
nexa-signals = { path = "../../packages/nexa-signals" }
nexa-web = { path = "../../packages/nexa-web" }
nexa-rsx = { path = "../../packages/nexa-rsx" }
console_error_panic_hook = "0.1"
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
smallvec = "1.11"
tracing = "0.1"
tracing-wasm = "0.2"
