[package]
name = "web-counter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nexa-core = { path = "../../packages/nexa-core" }
nexa-web = { path = "../../packages/nexa-web" }
nexa-rsx = { path = "../../packages/nexa-rsx" }
nexa-signals = { path = "../../packages/nexa-signals" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
smallvec = "1.0"

# Enable optimizations for WASM
[profile.release]
lto = true
opt-level = 'z'
